feat: add api chats
